Jan 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- move struct games into games.c which is now generated from games.xml by
  gamesxml2c
- don't pass tribes2 name if empty
- add --dontlaunch parameter for internal use
- add exec function to hexenworld (anyone ever played that game??)
- make sof2 master protcol configurable

Jan 07, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- check props pointer before dereferencing it ...

Jan 05, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- added comment and "this server sucks" properties for servers

Jan 02, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add lan masters per default
- fix lan browsing for Americas Army

Jan 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- remove multiplay.co.uk AA master
- fix some function prototypes
- --add command line option to just add a server to favorites without launching
  a game

Dec 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added support for postal2, no master.

Dec 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix LAN browsing. Only worked by luck.

Dec 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix crash caused by wrong reference counting of uservers
- use mkstemp instead of pid based temporary file to avoid symlink attacks

Dec 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- --launch now guesses the type from the port if only one argument is given. If
  not enough information is given (no type, no port) it will prompt the user to
  choose the type. This way, it should be possible to use --launch now e.g.
  from within IRC clients where you don't know the type before.
- add second argument to add_server_dialog() to preset the address
- make combo_set_vals() work with empty str argument

Dec 02, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- convert server names from iso-8859-1 to UTF-8 if needed

Nov 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>